fix: fix few words

--- a/data/blog/first-blog.mdx
+++ b/data/blog/first-blog.mdx
@@ -25,7 +25,7 @@ Hello Everyone, this is my first blog and I am just trying to test all the featu
 
 ### Test Code
 
-Testing if the prism does it work or not with js code
+Testing if the prism does it's work or not with js code
 
 ```js:sample.js
 const Blog = ({ posts }) => (
@@ -55,7 +55,7 @@ const Blog = ({ posts }) => (
 
 ### Test CSS Code
 
-Testing if the prism does it work or not with css code
+Testing if the prism does it's work or not with css code
 
 ```css:styles.css
 @font-face {
