blog: update blog

--- a/data/blog/open-source-journey.mdx
+++ b/data/blog/open-source-journey.mdx
@@ -45,9 +45,10 @@ me.
 
 Then, in 2021 I started exploring Open Source again and came across [**_Kubernetes_**](https://kubernetes.io) open source community and attended a Kubernetes Contributor Workshop.
 
-<br />
 You can find about the workshop [here](https://github.com/kubernetes-sigs/contributor-playground/tree/master/india/kcd-blr-2021).
-You can see me in the below picture in a blue T-Shirt smiling😅. This was a picture
+
+<br />
+You can find me in the below picture in a blue T-Shirt smiling😅. This was a picture
 from that workshop.
 
 <br />
@@ -58,7 +59,7 @@ from that workshop.
 	height={2026 / 4}
 />
 
-After that workshop, I started making a small contribution to Kubernetes docs. Believe me, It was so overwhelming looking at such a huge codebase and not able to understand a single thing. But this time, I understood that it is not something that is happening only with me but with everyone. Eventually, I understood that even other contributors who are contributing to the project for a long time also don't know about the whole codebase. And it is okay to not know about the whole codebase because it is really difficult to understand everything about such a huge codebase.
+After that workshop, I started making a small contribution to [Kubernetes docs](https://github.com/kubernetes/website). Believe me, It was so overwhelming looking at such a huge codebase and not able to understand a single thing. But this time, I understood that it is not something that is happening only with me but with everyone. Eventually, I understood that even other contributors who are contributing to the project for a long time also don't know about the whole codebase. And it is okay to not know about the whole codebase because it is really difficult to understand everything about such a huge codebase.
 
 I am still learning and exploring and trying to be as active as possible.
 
@@ -67,7 +68,7 @@ You can find some of the PR that I made in Kubernetes [here](https://github.com/
 
 ### Why contribute to Open Source?
 
-You learn a lot while contributing to open source.
+You learn a whole lot of new things while contributing to open source.
 
 Here are few things-
 
@@ -86,7 +87,7 @@ Some important questions that I like to answer which I also had when I started c
 
 - **Is there any prerequisite to contribute to open source?**
 
-  There is no prerequisite to get started in open source. You just need to be ready to learn things in the way.
+  There is no prerequisite to get started in open source. You just need some basic knowledge about Git and those technologies being used in the project that you want to contribute but not necessarily, and readiness to learn things on the way.
 
 - **How to choose an open-source project**?
 
