blog: update blog

--- a/data/blog/open-source-journey.mdx
+++ b/data/blog/open-source-journey.mdx
@@ -14,13 +14,13 @@ image: '/static/blog/open-source-journey/banner.png'
 />
 ### Introduction{' '}
 
-Before I begin to tell you about my journey in Open Source, let us
-first understand what Open Source and Open Source contribution mean.
+Before I begin to tell you about my journey in Open Source till now, let us
+first understand what Open Source and Open Source Contribution mean.
 
 The word **_Open Source_** is referred to **_Open Source Software (OSS)_** which is basically a type of software whose code is available publicly to use and modify. Simply, we can put this as software that can be freely distributed and the codebase of the software is available publicly.
 
 <br />
-So, Open Source Contribution means a contribution to the development or improvement
+So, ***Open Source Contribution*** means a contribution to the development or improvement
 of the open-source software. There are multiple ways to contribute to open-source
 software like contributing to development, documentation of the software and even
 reporting any issue is also a contribution.
