chore: :mag: add keywords meta tag

--- a/data/blog/first-blog.mdx
+++ b/data/blog/first-blog.mdx
@@ -3,6 +3,7 @@ title: 'First Blog'
 publishedAt: '2021-09-04'
 summary: 'This is my first blog and I am just testing all the features are working'
 image: '/static/blog/first-blog/banner.jpg'
+keywords: 'first blog'
 ---
 
 <CImage
