--- a/data/blog/open-source-journey.mdx
+++ b/data/blog/open-source-journey.mdx
@@ -3,6 +3,7 @@ title: 'My Open Source Journey'
 publishedAt: '2021-09-08'
 summary: 'I will be sharing my little what so experience I had with open source contributions till now,  and answered few questions like should you be contributing, what all you can learn in the process, how to get started, and all those things to help you learn a little about open source contribution'
 image: '/static/blog/open-source-journey/banner.png'
+keywords: 'Open Source Journey, What is Open Source, How to get started in Open Source',
 ---
 
 <Image
