chore: :memo: wrap image by a tag

--- a/data/blog/open-source-journey.mdx
+++ b/data/blog/open-source-journey.mdx
@@ -53,12 +53,21 @@ You can find me in the below picture in a blue T-Shirt smiling😅. This was a p
 from that workshop.
 
 <br />
-<CImage
-	alt='Workshop Picture'
-	src='/static/blog/open-source-journey/workshop.jpg'
-	width={3544 / 4}
-	height={2026 / 4}
-/>
+<a
+	href='https://github.com/kubernetes-sigs/contributor-playground/tree/master/india/kcd-blr-2021'
+	aria-label='Workshop Picture'
+	target='_blank'
+	rel='noopener noreferrer'
+>
+
+    <CImage
+    	alt='Workshop Picture'
+    	src='/static/blog/open-source-journey/workshop.jpg'
+    	width={3544 / 4}
+    	height={2026 / 4}
+    />
+
+</a>
 
 After that workshop, I started making a small contribution to [Kubernetes docs](https://github.com/kubernetes/website). Believe me, It was so overwhelming looking at such a huge codebase and not able to understand a single thing. But this time, I understood that it is not something that is happening only with me but with everyone. Eventually, I understood that even other contributors who are contributing to the project for a long time also don't know about the whole codebase. And it is okay to not know about the whole codebase because it is really difficult to understand everything about such a huge codebase.
 
