chore: :wheelchair: improve accessibility

--- a/data/blog/open-source-journey.mdx
+++ b/data/blog/open-source-journey.mdx
@@ -13,7 +13,7 @@ keywords: 'Open Source Journey, What is Open Source, How to get started in Open 
 	height={1440 / 3}
 	priority
 />
-### Introduction{' '}
+### Introduction
 
 Before I begin to tell you about my journey in Open Source till now, let us
 first understand what Open Source and Open Source Contribution mean.
@@ -36,7 +36,7 @@ experience. There could be right or wrong according to someone else.
 
 I came to know about Open Source contribution way back in mid of the year 2020. But I didn't know anything about its importance or benefit or what it brings to you. I thought contribution was all about writing some code by ourselves and contributing to the development of the project. In that year, I did my first contribution to [**freeCodeCamp**](https://www.freecodecamp.org/) project.
 
-You can find some of my PR in this project [here](https://github.com/freeCodeCamp/freeCodeCamp/pulls?q=is%3Apr+author%3Aniteshseram).
+You can find some of my PR in [freeCodeCamp](https://github.com/freeCodeCamp/freeCodeCamp/pulls?q=is%3Apr+author%3Aniteshseram).
 
 <br />
 So, the mistake back I made back then was I didn't try to explore and learn more
@@ -46,7 +46,7 @@ me.
 
 Then, in 2021 I started exploring Open Source again and came across [**_Kubernetes_**](https://kubernetes.io) open source community and attended a Kubernetes Contributor Workshop.
 
-You can find about the workshop [here](https://github.com/kubernetes-sigs/contributor-playground/tree/master/india/kcd-blr-2021).
+You can check out about the [workshop](https://github.com/kubernetes-sigs/contributor-playground/tree/master/india/kcd-blr-2021).
 
 <br />
 You can find me in the below picture in a blue T-Shirt smiling😅. This was a picture
@@ -74,7 +74,7 @@ After that workshop, I started making a small contribution to [Kubernetes docs](
 I am still learning and exploring and trying to be as active as possible.
 
 <br />
-You can find some of the PR that I made in Kubernetes [here](https://github.com/kubernetes/website/pulls?q=author%3Aniteshseram+).
+You can find some of the PR that I made in [Kubernetes docs](https://github.com/kubernetes/website/pulls?q=author%3Aniteshseram+).
 
 ### Why contribute to Open Source?
 
