fix: :bug: correct image extension for blog

--- a/data/blog/contact-form-in-nextjs-with-nodemailer.mdx
+++ b/data/blog/contact-form-in-nextjs-with-nodemailer.mdx
@@ -399,7 +399,7 @@ You can go ahead and create the Gmail account by yourself like we do normally.
 <br />
 <CImage
 	alt='Manage Google Account'
-	src='/static/blog/nextjs-with-nodemailer/img1.png'
+	src='/static/blog/nextjs-with-nodemailer/img1.PNG'
 	width={1083}
 	height={605}
 />
@@ -409,13 +409,13 @@ configured from before, then you will see the **_App passwords_** option.
 <br />
 <CImage
 	alt='2 Step Verification'
-	src='/static/blog/nextjs-with-nodemailer/img2.png'
+	src='/static/blog/nextjs-with-nodemailer/img2.PNG'
 	width={1558}
 	height={504}
 />
 <CImage
 	alt='App passwords'
-	src='/static/blog/nextjs-with-nodemailer/img3.png'
+	src='/static/blog/nextjs-with-nodemailer/img3.PNG'
 	width={1464}
 	height={405}
 />
@@ -424,7 +424,7 @@ Click on App passwords and select the options as below image.
 <br />
 <CImage
 	alt='App passwords options'
-	src='/static/blog/nextjs-with-nodemailer/img4.png'
+	src='/static/blog/nextjs-with-nodemailer/img4.PNG'
 	width={929}
 	height={339}
 />
@@ -457,7 +457,7 @@ In Vercel, go to your Project settings and then go to the Environment Variables 
 <br />
 <CImage
 	alt='Vercel Project settings'
-	src='/static/blog/nextjs-with-nodemailer/img5.png'
+	src='/static/blog/nextjs-with-nodemailer/img5.PNG'
 	width={1330}
 	height={757}
 />
@@ -467,7 +467,7 @@ Then, you have to provide the name and value for that environment variables **_S
 <br />
 <CImage
 	alt='Vercel Environment variables'
-	src='/static/blog/nextjs-with-nodemailer/img6.png'
+	src='/static/blog/nextjs-with-nodemailer/img6.PNG'
 	width={1342}
 	height={673}
 />
