blog: :memo: update blog

--- a/data/blog/contact-form-in-nextjs-with-nodemailer.mdx
+++ b/data/blog/contact-form-in-nextjs-with-nodemailer.mdx
@@ -476,7 +476,7 @@ After adding the environment variables, make sure to redeploy the project. Other
 
 ### Final Testing
 
-Now, run your app locally or in production and try submitting the contact form. You will see the message _Your message was sent successfully_ below your contact form.
+Now, run your app locally or in production and try submitting the contact form. You will see the message _Your message was sent successfully_ below your contact form and you will finally receive the mail upon the contact form submission.
 
 <br />
 Hooray! We are done.🎉
