fix: :bug: fix bug in first blog

--- a/data/blog/first-blog.mdx
+++ b/data/blog/first-blog.mdx
@@ -6,7 +6,7 @@ image: '/static/blog/first-blog/banner.jpg'
 keywords: 'first blog'
 ---
 
-<CImage
+<Image
 	alt='Banner'
 	src='/static/blog/first-blog/banner.jpg'
 	width={2550 / 3}
