blog: :docs: update blog

--- a/data/blog/setting-up-eslint-prettier-and-husky-with-lint-staged-for-your-nextjs-project.mdx
+++ b/data/blog/setting-up-eslint-prettier-and-husky-with-lint-staged-for-your-nextjs-project.mdx
@@ -65,7 +65,7 @@ You can try by going to your `pages/index.js` and declaring any variables or imp
 	height={563}
 />
 In the above image, you can see that a variable `abc` is declared but not used anywhere
-in that file. But, it doesn't underline variable `abc` which means no issue was found.
+in that file. But, the variable `abc` is not underline which means no issue was found.
 <Image
 	alt='ESLint in Console'
 	src='/static/blog/setting-up-eslint-prettier-and-husky-with-lint-staged-for-your-nextjs-project/1.PNG'
