--- a/content/consensus-algorithms-building-trust-in-blockchain.mdx
+++ b/content/consensus-algorithms-building-trust-in-blockchain.mdx
@@ -6,7 +6,7 @@ summary: 'Understand consensus algorithms and how it ensures trust, validate tra
 
 ### Introduction
 
-Blockchain technology has revolutionized the way we think about digital transactions. [Blockchain](/blog/intro-web3) offers a secure, decentralized, and transparent system that has the potential to transform various industries. However, building trust in these systems is crucial. This is where consensus algorithms and cryptographic techniques play a vital role. In this blog, we will delve into the world of consensus algorithms and cryptographic techniques, understanding their importance in establishing trust and ensuring the integrity of blockchain networks.
+Blockchain technology has revolutionized the way we think about digital transactions. [Blockchain](/blog/intro-web3) offers a secure, decentralized, and transparent system that has the potential to transform various industries. However, building trust in these systems is crucial. This is where consensus algorithms play a vital role. In this blog, we will delve into the world of consensus algorithms, understanding their importance in establishing trust and ensuring the integrity of blockchain networks.
 
 ### 🤔 What is Consensus Algorithm?
 
