Add internal blog link

--- a/content/51-percent-attack.mdx
+++ b/content/51-percent-attack.mdx
@@ -6,11 +6,11 @@ summary: "Understand the 51% attack, a significant threat to blockchain's decent
 
 ### Introduction
 
-No system is entirely immune to vulnerabilities and the same is true with Blockchain and one such concern is the 51% attack. A 51% attack is capable of wreaking havoc on a blockchain network and has the potential to undermine one of the core principles of blockchain technology: decentralization. In this blog, we will understand what exactly is a 51% attack and how it is prevented in the blockchain network. 
+No system is entirely immune to vulnerabilities and the same is true with [Blockchain](/blog/intro-web3) and one such concern is the 51% attack. A 51% attack is capable of wreaking havoc on a blockchain network and has the potential to undermine one of the core principles of blockchain technology: decentralization. In this blog, we will understand what exactly is a 51% attack and how it is prevented in the blockchain network. 
 
 ### What is a 51% Attack?🤔 
 
-A **51% Attack** occurs when a single malicious actor or a group of adversaries manages to gain control of more than 50% of a blockchain network's mining power, also known as hashing power. By controlling the majority of the network's hashing power, the attackers can manipulate the consensus algorithm and commit malicious acts, such as double-spending and blocking transactions. These attacks pose a significant threat to the integrity of public blockchain networks and can lead to a loss of trust in the system. 
+A **51% attack** occurs when a single malicious actor or a group of adversaries manages to gain control of more than 50% of a blockchain network's mining power, also known as hashing power. By controlling the majority of the network's hashing power, the attackers can manipulate the consensus algorithm and commit malicious acts, such as double-spending and blocking transactions. These attacks pose a significant threat to the integrity of public blockchain networks and can lead to a loss of trust in the system. 
 
 #### The Role of Consensus Algorithm?
 
