remove unncessary hyphen

--- a/content/51-percent-attack.mdx
+++ b/content/51-percent-attack.mdx
@@ -14,7 +14,7 @@ A **51% attack** occurs when a single malicious actor or a group of adversaries 
 
 #### The Role of Consensus Algorithm?
 
-Blockchain networks rely on a [consensus algorithm](/blog/consensus-algorithms-building-trust-in-blockchain) to validate transactions and maintain the security and integrity of the system. Consensus algorithms like [Proof-of-Work (PoW)](/blog/consensus-algorithms-building-trust-in-blockchain#proof-of-work-pow) and [Proof-of-Stake (PoS)](/blog/consensus-algorithms-building-trust-in-blockchain#proof-of-stake-pos) require nodes to agree on the validity of transactions before adding them to the blockchain. This process ensures that the network remains decentralized and secure from tampering.
+Blockchain networks rely on a [consensus algorithm](/blog/consensus-algorithms-building-trust-in-blockchain) to validate transactions and maintain the security and integrity of the system. Consensus algorithms like [Proof of Work (PoW)](/blog/consensus-algorithms-building-trust-in-blockchain#proof-of-work-pow) and [Proof of Stake (PoS)](/blog/consensus-algorithms-building-trust-in-blockchain#proof-of-stake-pos) require nodes to agree on the validity of transactions before adding them to the blockchain. This process ensures that the network remains decentralized and secure from tampering.
 
 #### Centralization vs. Decentralization
 
@@ -66,7 +66,7 @@ The general assumption is that a 51% attack would effectively kill the targeted 
 
 - **Consensus Mechanisms**
 
-  Adopting alternative consensus mechanisms, such as [Proof-of-Stake (PoS)](blog/consensus-algorithms-building-trust-in-blockchain#proof-of-stake-pos) or Delegated Proof-of-Stake (DPoS), can help prevent 51% attacks. These mechanisms rely on validators with a stake in the network, rather than miners with computational power, to secure the network and validate transactions.
+  Adopting alternative consensus mechanisms, such as Proof of Stake (PoS) or Delegated Proof of Stake (DPoS), can help prevent 51% attacks. These mechanisms rely on validators with a stake in the network, rather than miners with computational power, to secure the network and validate transactions.
 
 ### Conclusion🎯 
 A 51% attack poses a significant risk to blockchain networks, particularly those without substantial diversification of hashing power. Large networks like Bitcoin and Ethereum are less prone to these attacks, but smaller networks and altcoins must remain vigilant.
