Fix broken link in blog

--- a/content/setting-up-eslint-prettier-and-husky-with-lint-staged-for-your-nextjs-project.mdx
+++ b/content/setting-up-eslint-prettier-and-husky-with-lint-staged-for-your-nextjs-project.mdx
@@ -32,7 +32,7 @@ yarn create next-app nextjs-linting-project
 Feel free to replace `nextjs-linting-project` with whatever project name you prefer.
 This will create a folder named `nextjs-linting-project`. Once it is done, navigate inside that folder and we are ready to go!
 
-[Follow along with the git commits](<[https://github.com/niteshseram/nextjs-linting-project/commit/498b1419459f0c79d2850956cc360bd77f57ebc4](https://github.com/niteshseram/nextjs-linting-project/commit/498b1419459f0c79d2850956cc360bd77f57ebc4)>)
+[Follow along with the git commits](https://github.com/niteshseram/nextjs-linting-project/commit/498b1419459f0c79d2850956cc360bd77f57ebc4)
 
 ### Setting up ESLint
 
