--- a/content/setting-up-eslint-prettier-and-husky-with-lint-staged-for-your-nextjs-project.mdx
+++ b/content/setting-up-eslint-prettier-and-husky-with-lint-staged-for-your-nextjs-project.mdx
@@ -130,7 +130,7 @@ npm i --save-dev prettier eslint-config-prettier
 
 Once you installed these, create a [`.prettierrc.json`](https://github.com/niteshseram/nextjs-linting-project/blob/fed364b39693ae0abf45c6976a386a01b4d924af/.prettierrc.json) file and add the below rules in the file.
 
-```json title=".prettierrc.json"
+```json {1-3,4} title=".prettierrc.json"
 {
 	"endOfLine": "lf",
 	"printWidth": 80,
