--- a/content/intro-web3.mdx
+++ b/content/intro-web3.mdx
@@ -4,7 +4,7 @@ publishedAt: '2023-05-06'
 summary: 'Gain a deeper understanding of blockchain and Web3 in this blog. Discover the use cases of blockchain, how it differs from the current web, and the problems it solves for the future of the internet.'
 ---
 
-Welcome to the world of Web3! 🌐 If you're new to this space, you might have heard a lot of buzzwords being thrown around like blockchain, Web3, and more. In this blog post, we'll be covering everything you need to know about these terms and what they mean for the future of the internet. 🚀
+Welcome to the world of Web3! If you're new to this space, you might have heard a lot of buzzwords being thrown around like blockchain, Web3, and more. In this blog post, we'll be covering everything you need to know about these terms and what they mean for the future of the internet.
 
 ### What is Blockchain?
 
@@ -14,7 +14,7 @@ At its core, blockchain is a decentralized ledger that allows for secure, transp
 - Every time a transaction is made, it is added to the ledger as a "block" and verified by a network of computers called nodes.
 - Once verified, the block is added to the chain of previous blocks, creating an immutable record of all transactions.
 
-### What is Web3? 🌐
+### What is Web3?
 
 Web3, also known as the decentralized web, is the next evolution of the internet. Unlike Web2, which is the internet we use today, Web3 is built on decentralized technologies like blockchain that allow for greater security, privacy, and user control. Here are some key points to keep in mind:
 
@@ -22,7 +22,7 @@ Web3, also known as the decentralized web, is the next evolution of the internet
 - Think of it as a more democratic internet where power is distributed among its users instead of centralized in a few large tech companies.
 - With Web3, users can have greater control over their online identities, data privacy, and digital assets.
 
-### Web2 vs Web3 💻
+### Web2 vs Web3
 
 To understand the difference between Web2 and Web3, think of Web2 as a rented apartment while Web3 is your own house. Here are some key differences to keep in mind:
 
@@ -36,14 +36,14 @@ To understand the difference between Web2 and Web3, think of Web2 as a rented ap
 - You can participate in decentralized applications and networks without intermediaries.
 - You can be part of a more democratic and transparent internet where power is distributed among users.
 
-### What are the use cases of Blockchain? 🤔
+### What are the use cases of Blockchain?
 
 One of the most popular use cases of blockchain is cryptocurrency, such as Bitcoin or Ethereum. With blockchain, you can transfer value from one person to another without the need for a bank or other intermediary. Here are some other key use cases to keep in mind:
 - **Decentralized finance (DeFi):** With blockchain, you can participate in decentralized financial applications that allow you to borrow, lend, and invest without intermediaries.
 - **Supply chain management:** Blockchain can be used to track the movement of goods and ensure their authenticity, improving transparency and reducing fraud.
 - **Digital identity:** Blockchain can be used to create decentralized digital identities that give users more control over their online identities and privacy.
 
-### What problems does Blockchain solve? 🤔
+### What problems does Blockchain solve?
 
 Blockchain has the potential to solve a variety of problems related to security, transparency, and privacy. Here are some key issues that blockchain can help address:
 
@@ -53,9 +53,9 @@ encrypted and decentralized, giving users greater control over their data privac
 - **Centralization:** One of the biggest problems with the current web is the centralization of power in a few large tech companies. With blockchain, power is distributed among users, creating a more democratic and transparent internet.
 - **Security:** Blockchain's decentralized architecture makes it much more difficult for hackers to compromise the network, improving security for users.
 
-### Conclusion 🎉
+### Conclusion
 
 I hope this post has helped you understand the basics of blockchain, Web3, and their use cases. 
 As the world becomes increasingly digital, it's important to understand how these technologies work and how they can benefit us. 
 With Web3, we have the potential to create a more democratic, secure, and transparent internet that empowers users and reduces the power of intermediaries. 
-So let's continue to explore this exciting new frontier and see where it takes us! 🌟
+So let's continue to explore this exciting new frontier and see where it takes us!
