--- a/content/51-percent-attack.mdx
+++ b/content/51-percent-attack.mdx
@@ -8,7 +8,7 @@ summary: "Understand the 51% attack, a significant threat to blockchain's decent
 
 No system is entirely immune to vulnerabilities and the same is true with [Blockchain](/blog/intro-web3) and one such concern is the 51% attack. A 51% attack is capable of wreaking havoc on a blockchain network and has the potential to undermine one of the core principles of blockchain technology: decentralization. In this blog, we will understand what exactly is a 51% attack and how it is prevented in the blockchain network. 
 
-### What is a 51% Attack?🤔 
+### What is a 51% Attack?
 
 A **51% attack** occurs when a single malicious actor or a group of adversaries manages to gain control of more than 50% of a blockchain network's mining power, also known as hashing power. By controlling the majority of the network's hashing power, the attackers can manipulate the consensus algorithm and commit malicious acts, such as double-spending and blocking transactions. These attacks pose a significant threat to the integrity of public blockchain networks and can lead to a loss of trust in the system. 
 
@@ -22,7 +22,7 @@ A key feature of blockchain technology is its decentralized nature, meaning that
 
 However, when a 51% attack occurs, this decentralization is compromised, as the attacker gains control over the majority of the network's hashing power. This control allows the attacker to manipulate the consensus algorithm, leading to potential double-spending and transaction blocking.
 
-### How Does a 51% Attack Work?🛠️
+### How Does a 51% Attack Work?
 
 In a 51% attack, the malicious actor(s) leverage their majority control over the network's hashing power to manipulate the blockchain in their favor. This control enables them to:
 
@@ -48,13 +48,13 @@ By controlling the majority of the hashing power, a 51% attacker can decide whic
 
 Unlike PoW, PoS does not require extensive computational power. Instead, it relies on the concept of economic stake to secure the network. Nodes with higher stakes have a stronger incentive to act honestly, as they risk losing their stake if they engage in fraudulent behavior. This aspect makes PoS more energy-efficient compared to PoW.
 
-### The Real-World Impact of a 51% Attack🌎 
+### The Real-World Impact of a 51% Attack
 
 A successful 51% attack can have severe consequences for the attacked blockchain network. Users may lose their digital assets, and the public's trust in the network may erode. The price of the affected cryptocurrency could plummet as people begin to sell off their holdings in fear of further attacks.
 
 The general assumption is that a 51% attack would effectively kill the targeted digital currency. However, the reality is often more nuanced, as some blockchain networks have managed to recover from such attacks and implement measures to prevent future occurrences.
 
-### How to Prevent a 51% Attack?🛡️
+### How to Prevent a 51% Attack?
 
 - **Decentralization of Miners**
 
@@ -68,5 +68,5 @@ The general assumption is that a 51% attack would effectively kill the targeted 
 
   Adopting alternative consensus mechanisms, such as Proof of Stake (PoS) or Delegated Proof of Stake (DPoS), can help prevent 51% attacks. These mechanisms rely on validators with a stake in the network, rather than miners with computational power, to secure the network and validate transactions.
 
-### Conclusion🎯 
+### Conclusion
 A 51% attack poses a significant risk to blockchain networks, particularly those without substantial diversification of hashing power. Large networks like Bitcoin and Ethereum are less prone to these attacks, but smaller networks and altcoins must remain vigilant.
